@@ -76,3 +76,4 @@
 #define USERKEY_BOTLEFT         XK_B
 #define USERKEY_BOTRIGHT        XK_N
 #define USERKEY_DELETE          XK_End
+#define USERKEY_MOD             XK_Alt_L
